--- a/ueboot-view/package.json
+++ b/ueboot-view/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ueboot",
-    "version": "1.7.42",
+    "version": "1.7.43",
     "description": "ueboot是一个基于`spring boot + vue2.0+iview3.0`的基础开发平台，通过这个平台可以快速完成某些CRUD功能的系统（从前端到后端快速实现）",
     "author": "ueboot",
     "homepage": "http://www.ueboot.com",
@@ -43,6 +43,7 @@
     "dependencies": {
         "babel-polyfill": "^6.26.0",
         "copy-webpack-plugin": "^4.5.3",
+        "natives": "^1.1.6",
         "vue-color": "^2.7.0",
         "vue-pdf": "^3.3.1"
     },
